fancydialogs: replace get(0) with getFirst()